whole styles corrections

--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="css/header.css?210320192100" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
+		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?200320192100"></script>
@@ -50,7 +51,6 @@
 					<p>Не удается найти веб-страницу или документ.</p>
 				</div>
 				<div class="content">
-					<!-- <h2>Не удается найти веб-страницу или документ.</h2> -->
 					<p>Обозревателю удалось подключиться к веб-узлу,
 						но запрошенная страница не найдена. Возможно,
 						веб-страница временно недоступна. Кроме того,
@@ -66,7 +66,7 @@
 
 			<footer>
 				<div>
-					<div class="preview down_level"></div>
+					<div class="down_level"></div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
