--- a/expertise.html
+++ b/expertise.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
 		<link rel="stylesheet" href="css/gallery.css" />
 		<link rel="stylesheet" href="css/lightbox.css" />
+		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/swiper.js"></script>
@@ -84,18 +85,16 @@
 
 				<div class="brief">
 					<h1>Мастера-парфюмеры</h1>
-					<p>Наши парфюмеры, настоящие увлеченные профессионалы,
+					<blockquote>Наши парфюмеры, настоящие увлеченные профессионалы,
 						вкладывают все свои знания в создание парфюмерных композиций.
-						Богатые разнообразным опытом, они сочиняют и создают, а также
+						</blockquote>
+						<p>Богатые разнообразным опытом, они сочиняют и создают, а также
 						полагаются на команду по оценке и маркетингу, чтобы перевести
 						ваши запросы в уникальную обонятельную подпись. Они уделяют
 						самое большое внимание выбору сырья, которое они используют,
 						чтобы предлагать самые качественные заметки. Обладая
 						мастерством рецептур для всех видов применения, они
-						соблазнят вас своими обонятельными творениями.<br/>
-						<br/>
-						<br/>
-						<span>Встречайте наших мастеров-парфюмеров</span>
+						соблазнят вас своими обонятельными творениями.
 					</p>
 
 				</div>
@@ -207,7 +206,7 @@
 			</article>
 
 			<footer>
-					<div class="down_level">
+					<div class="down_level gallery_wrap">
 						<div class="gallery">
 							<div class="swiper">
 								<ul class="swiper-wrapper">
