--- a/homecare.html
+++ b/homecare.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/product.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
+		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 				<script defer src="js/common.js?270320192100"></script>
@@ -87,7 +88,7 @@
 
 			<footer>
 				<div>
-					<div class="preview down_level"></div>
+					<div class="down_level"></div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
