--- a/product.html
+++ b/product.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/product.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/lightbox.css" />
+		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/swiper.js"></script>
@@ -68,11 +69,11 @@
 				</div>
 				</div>
 
-				<div class="content">
-					<h2>Производство</h2>
-					<p>Завод-изготовитель Floressence соответствует ISO 9001 версии 2015.
+				<div class="brief">
+					<h1>Производство</h1>
+					<blockquote>Завод-изготовитель Floressence соответствует ISO 9001 версии 2015.
 						 Наша команда обеспечивает качественное производство, адаптированную
-						 упаковку и своевременную доставку для каждого заказа.</p>
+						 упаковку и своевременную доставку для каждого заказа.</blockquote>
 					<p>Оборудование нового поколения с высокоточными роботами может
 						разрабатывать и производить программы, соответствующие вашим
 						требованиям, от одного килограмма до нескольких тонн. Современные
@@ -101,6 +102,39 @@
 				</div>
 
 				<div class="preview product">
+					<div class="gallery">
+						<div class="swiper">
+							<ul class="swiper-wrapper">
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/water.jpg" data-lightbox="gallery" title="">
+										<img src="./img/water.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/water.jpg" data-lightbox="gallery" title="">
+										<img src="./img/water.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+							</ul>
+							</div>
+						<div class="button prev"></div>
+						<div class="button next"></div>
+					</div>
 				</div>
 
 				<div class="content">
@@ -117,45 +151,6 @@
 						выполнены. Наше руководство активно участвует в нашем контроле качества.
 						Это обеспечивает необходимый импульс и руководство, гарантируя, что это
 						 сообщено всем отделам.</p>
-					</div>
-
-					<div class="preview product">
-						<div class="gallery">
-							<div class="swiper">
-								<ul class="swiper-wrapper">
-									<li class="swiper-slide">
-										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</a>
-									</li>
-									<li class="swiper-slide">
-										<a href="./img/water.jpg" data-lightbox="gallery" title="">
-											<img src="./img/water.jpg" alt="Продукция" />
-										</a>
-									</li>
-									<li class="swiper-slide">
-										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</a>
-									</li>
-									<li class="swiper-slide">
-										<a href="./img/water.jpg" data-lightbox="gallery" title="">
-											<img src="./img/water.jpg" alt="Продукция" />
-										</a>
-									</li>
-									<li class="swiper-slide">
-										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</a>
-									</li>
-								</ul>
-								</div>
-						</div>
-						<div class="button prev"></div>
-						<div class="button next"></div>
-					</div>
-
-				<div class="content">
 					<h2>Нормативно-правовые акты</h2>
 					<p>Наш отдел законодательства обеспечивает соответствие продукции действующим
 						стандартам. Он обрабатывает вопросники по продукту и поставляет сертификаты,
@@ -192,11 +187,48 @@
 						communautaires (Règlement CEE 2092/91) и франшизы, относящиеся к
 						биологическому методу производства.</p>
 				</div>
+
+				<div class="preview product">
+					<div class="gallery">
+						<div class="swiper">
+							<ul class="swiper-wrapper">
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/water.jpg" data-lightbox="gallery" title="">
+										<img src="./img/water.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/water.jpg" data-lightbox="gallery" title="">
+										<img src="./img/water.jpg" alt="Продукция" />
+									</a>
+								</li>
+								<li class="swiper-slide">
+									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+										<img src="./img/flo_xs.jpg" alt="Продукция" />
+									</a>
+								</li>
+							</ul>
+							</div>
+						<div class="button prev"></div>
+						<div class="button next"></div>
+					</div>
+				</div>
+
 			</article>
 
 			<footer>
 				<div>
-					<div class="preview down_level"></div>
+					<div class="down_level"></div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
