--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
+		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?200320192100"></script>
@@ -129,7 +130,7 @@
 
 			<footer>
 				<div>
-					<div class="preview down_level"></div>
+					<div class="down_level"></div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
