--- a/product.html
+++ b/product.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" href="css/product.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/lightbox.css" />
-		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/swiper.js"></script>
@@ -188,47 +187,45 @@
 						биологическому методу производства.</p>
 				</div>
 
-				<div class="preview product">
-					<div class="gallery">
-						<div class="swiper">
-							<ul class="swiper-wrapper">
-								<li class="swiper-slide">
-									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-										<img src="./img/flo_xs.jpg" alt="Продукция" />
-									</a>
-								</li>
-								<li class="swiper-slide">
-									<a href="./img/water.jpg" data-lightbox="gallery" title="">
-										<img src="./img/water.jpg" alt="Продукция" />
-									</a>
-								</li>
-								<li class="swiper-slide">
-									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-										<img src="./img/flo_xs.jpg" alt="Продукция" />
-									</a>
-								</li>
-								<li class="swiper-slide">
-									<a href="./img/water.jpg" data-lightbox="gallery" title="">
-										<img src="./img/water.jpg" alt="Продукция" />
-									</a>
-								</li>
-								<li class="swiper-slide">
-									<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
-										<img src="./img/flo_xs.jpg" alt="Продукция" />
-									</a>
-								</li>
-							</ul>
-							</div>
-						<div class="button prev"></div>
-						<div class="button next"></div>
-					</div>
-				</div>
-
 			</article>
 
 			<footer>
 				<div>
-					<div class="down_level"></div>
+					<div class="down_level">
+						<div class="gallery">
+							<div class="swiper">
+								<ul class="swiper-wrapper">
+									<li class="swiper-slide">
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</a>
+									</li>
+									<li class="swiper-slide">
+										<a href="./img/water.jpg" data-lightbox="gallery" title="">
+											<img src="./img/water.jpg" alt="Продукция" />
+										</a>
+									</li>
+									<li class="swiper-slide">
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</a>
+									</li>
+									<li class="swiper-slide">
+										<a href="./img/water.jpg" data-lightbox="gallery" title="">
+											<img src="./img/water.jpg" alt="Продукция" />
+										</a>
+									</li>
+									<li class="swiper-slide">
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</a>
+									</li>
+								</ul>
+								</div>
+							<div class="button prev"></div>
+							<div class="button next"></div>
+						</div>
+					</div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
