--- a/expertise.html
+++ b/expertise.html
@@ -11,12 +11,10 @@
 		<link rel="stylesheet" href="css/header.css?230320192100" />
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
-		<link rel="stylesheet" href="css/content.css" />
-		<link rel="stylesheet" href="css/company.css?270320192100" />
+		<link rel="stylesheet" href="css/prod_types.css" />
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
 		<link rel="stylesheet" href="css/gallery.css" />
 		<link rel="stylesheet" href="css/lightbox.css" />
-		<link rel="stylesheet" href="css/down_level.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/swiper.js"></script>
@@ -206,7 +204,7 @@
 			</article>
 
 			<footer>
-					<div class="down_level gallery_wrap">
+					<div class="down_level">
 						<div class="gallery">
 							<div class="swiper">
 								<ul class="swiper-wrapper">
