--- a/homecare.html
+++ b/homecare.html
@@ -11,9 +11,8 @@
 		<link rel="stylesheet" href="css/header.css?230320192100" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
-		<link rel="stylesheet" href="css/product.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
-		<link rel="stylesheet" href="css/down_level.css" />
+		<link rel="stylesheet" href="css/goods.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 				<script defer src="js/common.js?270320192100"></script>
