--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="css/header.css?230320192100" />
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
-		<link rel="stylesheet" href="css/content.css" />
-		<link rel="stylesheet" href="css/prod_types.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/lines.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?200320192100"></script>
@@ -95,12 +95,12 @@
 						<div class="preview_wrap">
 								<div>
 									<h3>Признанная техника, связанная с качеством материалов</h3>
-									<p class="main">Компания опирается на опыт технического и креативного
+									<p>Компания опирается на опыт технического и креативного
 										развития, особенно в области натуральности, благодаря
 										нашим 100%-ным составам NAT и составу нераздражающих
 										парфюмерных композиций LIGHT 26, таким образом избегая
 										для потребителей маркировку аллергенных ингредиентов.</p>
-									<p class="main"><a href="#" title="Наш опыт">Наш опыт</a></p>
+									<a href="#" title="Наш опыт">Наш опыт</a>
 								</div>
 						</div>
 					</div>
@@ -108,23 +108,21 @@
 						<div class="preview_wrap">
 								<div>
 									<h3>Техника, эффективность, производительность</h3>
-									<p class="main">Новое поколение оборудования с высокоточными роботами
+									<p>Новое поколение оборудования с высокоточными роботами
 										позволяет разрабатывать и производить ароматизаторы,
 										адаптированные к вашим ожиданиям, от килограмма до
 										нескольких тонн. Качество нашей продукции соответствует
 										строгому процессу отслеживания.</p>
-									<p class="main"><a href="#" title="Производство">Производство</a></p>
+									<a href="#" title="Производство">Производство</a>
 								</div>
 						</div>
 					</div>
-					<div class="text">
-						<div class="text_container">
-							<p>Творчество и компетентность наших команд находятся на службе
+					<div class="brief">
+						<p>Творчество и компетентность наших команд находятся на службе
 								у обонятельных желаний наших клиентов. Около пятидесяти профессионалов работают над
 								проектами парфюмерных композиций
 								для анализа, разработки и доставки оригинальных ароматов по всему
 								миру.</p>
-						</div>
 					</div>
 			</article>
 
