--- a/expertise.html
+++ b/expertise.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/header.css?230320192100" />
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
-		<link rel="stylesheet" href="css/prod_types.css" />
+		<link rel="stylesheet" href="css/lines.css" />
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
 		<link rel="stylesheet" href="css/gallery.css" />
 		<link rel="stylesheet" href="css/lightbox.css" />
