--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<span></span>
 			<nav>
 				<ul>
-					<li><a href="/company.html" title="О компании">О компании</a></li>
-					<li><a href="#" title="Продукция">Продукция</a></li>
-					<li><a href="#" title="Качество">Качество</a></li>
+					<li><a href="company.html" title="О компании">О компании</a></li>
+					<li><a href="product.html" title="Продукция">Продукция</a></li>
+					<li><a href="expertise.html" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
 				</ul>
 			</nav>
