--- a/product.html
+++ b/product.html
@@ -28,15 +28,15 @@
 			<span></span>
 			<nav>
 				<ul>
-					<li><a href="#" title="О компании">О компании</a></li>
+					<li><a href="company.html" title="О компании">О компании</a></li>
 					<li><span class="selected">Продукция</span></li>
-					<li><a href="#" title="Качество">Качество</a></li>
+					<li><a href="expertise.html" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
 				</ul>
 			</nav>
 			<header>
 				<div>
-					<a class="logo" href="/index.html" title="Слоган компании?"></a>
+					<a class="logo" href="index.html" title="Слоган компании?"></a>
 					<ul class="lang_choice">
 						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 			</div>
-			
+
 			<article>
 				<div class="brief">
 					<h1>Производство</h1>
