--- a/company.html
+++ b/company.html
@@ -25,14 +25,14 @@
 			<nav>
 				<ul>
 					<li><span class="selected">О компании</span></li>
-					<li><a href="#" title="Продукция">Продукция</a></li>
-					<li><a href="#" title="Качество">Качество</a></li>
+					<li><a href="product.html" title="Продукция">Продукция</a></li>
+					<li><a href="expertise.html" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
 				</ul>
 			</nav>
 			<header>
 				<div>
-					<a class="logo" href="/index.html" title="Слоган компании?"></a>
+					<a class="logo" href="index.html" title="Слоган компании?"></a>
 					<ul class="lang_choice">
 						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
