--- a/product.html
+++ b/product.html
@@ -99,7 +99,7 @@
 					</ul>
 				</div>
 
-				<div class="preview product">
+				<div class="preview_product">
 					<div class="gallery">
 						<div class="swiper">
 							<ul class="swiper-wrapper">
@@ -130,9 +130,7 @@
 								</li>
 							</ul>
 							</div>
-						<div class="button prev"></div>
-						<div class="button next"></div>
-					</div>
+						</div>
 				</div>
 
 				<div class="content">
